Version 2.4.0

  Bugfixes:
  - Fix a performance regression introduced in 2.3.0 by the fix for NCHAR
    and NVARCHAR2 columns.
    Reported by Phil Florent.

  Enhancements:
  - Support push-down of "uuid" values.
    Per request from Asish Kumar Gaddipati.

Version 2.3.0, released 2020-09-24
  Note: When upgrading from an older version of oracle_fdw, make sure to run
        ALTER EXTENSION oracle_fdw UPDATE;
        after installing the extension.

  Enhancements:
  - Support PostgreSQL v13.  Support for 9.2 and 9.1 is dropped.
  - Add a function "oracle_execute" to execute arbitrary SQL statements on
    Oracle.  The statements must not return a result (e.g. DDL statements).
  - Add an option "dblink" for Oracle database links.
    The option can be used on foreign tables or with IMPORT FOREIGN SCHEMA.
    Patch by Nicolas Boullis.
  - Add a column option "strip_zeros" that automatically strips ASCII 0
    characters from strings.
    Per request from Alexander Lampalzer.
  - New IMPORT FOREIGN SCHEMA options "max_long", "sample_percent" and
    "prefetch".  These set the corresponding options on imported tables.
    Suggested by "ferfebles".
  - Add support for isolation levels other than SERIALIZABLE.
    This is mostly because Oracle's implementation of SERIALIZABLE is so buggy.
    Patch by Jet C.X. Zhang.

  Bugfixes:
  - Fix bad results with uncorrelated subqueries.
    This affects queries have a foreign scan with a filter based on a subplan.
    Reported by "srakazmus".
  - Fix "Internal oracle_fdw error: encountered unknown node type 144"
    This can happen in plans involving tables with identity columns.
    Reported by Yang Lin.
  - Don't throw an error if DML statements modify no rows.
    This might be caused by a trigger on the Oracle side.
    Reported by Andrey Marinchuk.
  - Fix NCHAR and NVARCHAR2 handling.
    With single-byte Oracle character sets, this bug led to replacement